<resources>

    <string name="app_name">Løp til bussen</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Velg reise</string>
    <string name="button_text">Søk</string>
    <string name="departure_hint">Avgang - stasjon eller område</string>
    <string name="destination_hint">Destinasjon - stasjon eller område</string>
    <string name="button_send_log_text">Send log to developer</string>
    <string name="crash_toast_text">Sending crash report to the developer</string>
    <string name="clear_history">Tøm søkehistorikken</string>
    <string name="no_travel_found">Fant ingen direkterute mellom de to stasjonene/områdene.</string>
    <string name="something_went_wrong">Noe gikk feil ved henting av data fra Ruter. Vennligs prøv igjen senere. </string>
    <string name="network_error">Nettverksforbindelsen ble (midlertidig) borte, eller Ruter svarer ikke. Prøv igjen senere.</string>
    <string name="ok">OK</string>
    <string name="dialogHeader_error">Feilmelding</string>
    <string name="headerLineID">#</string>
    <string name="prefixErrorCode">"Noe gikk galt. Vennligst send epost til kenneho+apps@gmail.com, og beskriv hvordan feilen oppstod. Oppgi også feilkode "</string>
    <string name="headerDestinationName">Retning</string>
    <string name="headerCountdown">Avreisetid</string>
	<string name="expectedDeparture">Avgang</string>
	<string name="select_recent">"...eller velg blant de i listen under:"</string>
	<string name="from">Fra</string>
	<string name="to">Til</string>
	<string name="infoActivityHeaderText">Reise fra </string>
				
    <string-array name="departure_stations_array">
        <item>Solbergliveien</item>
        <item>Birkelunden</item>
        <item>Jernbanetorget</item>
        <item>Helsfyr</item>
    </string-array>
    <string-array name="destination_stations_array">
        <item>Oppsal T</item>
        <item>Helsfyr</item>
        <item>Sannergata</item>
        <item>Brugata</item>
        <item>Jernbanetorget</item>
    </string-array>

</resources>