<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <net.kenneho.runnow.DelayAutoCompleteTextView
        android:id="@+id/text_departure"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="2"
        android:hint="@string/departure_hint"
        android:inputType="text"
        android:tag="departure" />

    <net.kenneho.runnow.DelayAutoCompleteTextView
        android:id="@+id/text_destination"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="2"
        android:hint="@string/destination_hint"
        android:inputType="text"
        android:tag="destination" />

    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true" 
        android:layout_gravity="center_vertical|right"
        android:visibility="gone" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text" />

        <TextView
            android:id="@+id/historiTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/select_recent" />
        
    </LinearLayout>

    <ListView
        android:id="@+id/list_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>